k8s/apps/20-hpa-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hpa-demo
  namespace: apps
spec:
  selector:
    app: hpa-demo
  ports:
    - port: 80
      targetPort: 80
