k8s/apps/hpa-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hpa-demo
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: app.utieyincloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hpa-demo
                port:
                  number: 80
